deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
        - name: backend-container
          image: docker.io/simple_server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 40001
  selector:
    matchLabels:
      app: simple-server
