deploy/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  type: NodePort
  selector:
    app: simple-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
